2006-08-14  David Hampton  <hampton@employees.org>

	* guide/C/ch_txns.xml: Add some text to the "Entry Shortcuts"
	section for the Transfer field. Fixes #343244 (part 2).

	* guide/C/ch_txns.xml:
	* guide/C/ch_basics.xml: Update the text to distinguish between
	access (underlined) keys and actual menu shortcuts (listed at the
	end of a menu item). Fixes #343244 (part 1).

2006-07-09  Chris Lyttle  <chris@wilddev.net>

	* help/C/gettingstarted.xml: Added update from Dave Herman
	* Makefile.am: remove svn files from tarball
	* README: Updated for 2.0.0 release
	* NEWS: Updated for 2.0.0 release
	* configure.in: Updated for 2.0.0 release
	* guide/C/gnucash-guide.xml: Updated for 2.0.0 release
	* guide/C/ch_bus_ap.xml: Updated for 2.0.0 release
	* guide/C/gnucash-guide-C.omf: Updated for 2.0.0 release
	* guide/C/ch_bus_ar.xml: Updated for 2.0.0 release
	* guide/C/toc.xml: Removed for 2.0.0 release
	* guide/C/ch_loans.xml: Updated for 2.0.0 release
	* guide/C/ch_oview.xml: Updated for 2.0.0 release
	* guide/C/ch_currency.xml: Updated for 2.0.0 release
	* guide/C/ch1_032601.txt: Removed for 2.0.0 release
	* guide/C/ch_txns.xml: Updated for 2.0.0 release
	* guide/C/ch_reports.xml: Updated for 2.0.0 release
	* guide/C/ch3_030901.txt: Removed for 2.0.0 release
	* guide/C/ch6_021901.txt: Removed for 2.0.0 release
	* guide/C/ch_bus_pay.xml: Updated for 2.0.0 release
	* guide/C/ch_dep.xml: Updated for 2.0.0 release
	* guide/C/ch_invest.xml: Updated for 2.0.0 release
	* guide/C/ch_cc.xml: Updated for 2.0.0 release
	* guide/C/ch2_040601.txt: Removed for 2.0.0 release
	* guide/C/ch_budgets.xml: Updated for 2.0.0 release
	* guide/C/ch_accts.xml: Updated for 2.0.0 release
	* guide/C/ch5_021601.txt: Removed for 2.0.0 release
	* guide/C/ch4_022601.txt: Removed for 2.0.0 release
	* guide/C/ch_cbook.xml: Updated for 2.0.0 release
	* guide/C/appendixa.xml: Updated for 2.0.0 release
	* guide/C/appendixb.xml: Updated for 2.0.0 release
	* guide/C/appendixc.xml: Updated for 2.0.0 release