@@ -76,6 +76,15 @@ technology!).</para>
         xmlns:ts="http://www.gnucash.org/XML/ts"
         xmlns:slot="http://www.gnucash.org/XML/kvpslot"
         xmlns:cust="http://www.gnucash.org/XML/cust"
+        xmlns:entry="http://www.gnucash.org/XML/entry"
+        xmlns:lot="http://www.gnucash.org/XML/lot"
+        xmlns:invoice="http://www.gnucash.org/XML/invoice"
+        xmlns:owner="http://www.gnucash.org/XML/owner"
+        xmlns:job="http://www.gnucash.org/XML/job"
+        xmlns:billterm="http://www.gnucash.org/XML/billterm"
+        xmlns:bt-days="http://www.gnucash.org/XML/bt-days"
+        xmlns:sx="http://www.gnucash.org/XML/sx"
+        xmlns:fs="http://www.gnucash.org/XML/fs"
         xmlns:addr="http://www.gnucash.org/XML/custaddr"&gt;
  </literallayout>
   </listitem>
