@@ -1,3 +1,8 @@
+2006-09-13  Christian Stimming <stimming@tuhh.de>
+
+	* guide/C/appendixa.xml: Add additional namespaces for XSL
+	Transformations. bug#337692.
+
 2006-08-14  David Hampton  <hampton@employees.org>
 
 	* guide/C/ch_txns.xml: Add some text to the "Entry Shortcuts"
